fix overflow issues

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -115,8 +115,6 @@ body {
 }
 
 .debt {
-  overflow: hidden;
-
   .question {
     margin-top: 3rem !important;
   }
